--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
 }
 section {
     background-color: white;
-    
 } 
 
 .hero {
@@ -13,6 +12,7 @@ section {
     color: white;
     font-size: 40px;
 } 
+
 .footer {
     background-color: black;
     color: white;
@@ -37,7 +37,7 @@ li {
 } 
 
 h1 {
-    font-size:90px;
+    font-size: 90px;
     margin: 0;
 } 
 
@@ -49,16 +49,24 @@ p {
     font-size:30px;
     font-weight: 300;
 }
+
 .hero-area {
     display: flex;
     height: 100%;
     justify-content: space-between;
     align-items: center;
 }
+
 .hero-text {
     margin-left: 80px;
     margin-bottom: 200px;
 } 
+@media only screen and ( max-width: 667px) {
+.hero-text {
+    margin-left: 10px;
+    margin-bottom: 100px;
+    } 
+}
 .button {
     width:200px;
     height:55px;
@@ -82,16 +90,23 @@ p {
 .socials {
     padding-bottom: 200px;
 } 
-
+@media only screen and (max-width: 667px) {
+    .socials {
+        padding-bottom: 200px;
+    } 
+}
 .social {
     margin: 20px;
 }
 .sub-section {
-    display:flex ;
-    justify-content:space-around;
+    display: flex;
+    justify-content: space-around;
     padding:80px; 
-
 } 
+.subtext {
+    font-size: 15px;
+    font-weight: 300;
+}
 
 .headshot { 
     width:200px;
@@ -105,21 +120,29 @@ p {
     align-items: center;
 } 
 .project-card {
-    display: inline-block;
+    /* display: inline-block;
     padding: auto;
     margin: 10px;
     width: 300px;
     height: 500px;
     border: 1px black;
+    box-shadow: 5px 5px 20px rgb(197, 195, 195); */
+    padding-bottom: 25px;
+    display: inline-block;
+    align-items: center;
+    width: 300px;
+    height: 500px;
     box-shadow: 5px 5px 20px rgb(197, 195, 195);
-    
+    margin: 10px;
+    gap:10px;
 } 
 
 .project-conatiner {  
     display: flex;
     justify-content: space-around;
 } 
-@media only screen and (max-width: 1000px) {
+
+@media only screen and (max-width: 667px) {
     .project-container {
     display: flex;
     flex-wrap: wrap;
@@ -132,12 +155,13 @@ p {
     text-align: center;
     padding:80px;
 } 
+
 .project-image {
     margin-top: 25px;
     width: 250px;
     
-}
 
+}
 hr {
     margin-left: 20px;
     margin-right: 20px;
@@ -162,10 +186,10 @@ a {
 }
 
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 667px) {
     .hamburger {
         display: block;
-        border: 0;
+        border: 0px;
         background-color: transparent;
         color: white;
         font-size: 30px;
